final push, merged everything by hand